class Preference {
  
}